Resolve responsive logout nav link contrast and alignment issues

--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -69,16 +69,17 @@ header.masthead .site-heading {
     margin-top: 10px;
 }
 
-.btnWide, .btn-tag {
+.btn-wide, .btn-tag {
     width: 100%;
 }
 
 button.btn-sm, a.btn-sm {
-    line-height: .5;
+    line-height: 1;
+    border: 4px solid;
     border-radius: 10px;
 }
 
-btn-dark:hover {
+.btn-dark:hover {
     border: 4px solid #ff993b;
 }
 
@@ -88,11 +89,11 @@ btn-dark:hover {
     border-color: #ff993b;
 }
 
-    .btn-warning:hover {
-        color: white;
-        background-color: #212121;
-        outline: 4px solid #ff993b;
-    }
+.btn-warning:hover {
+    color: white;
+    background-color: #212121;
+    outline: 4px solid #ff993b;
+}
 
 /* ****** CARD STYLES ****** */
 .card-hr {
